# CppBacklab

./: .gitignore  .gitmodules  CMakeLists.txt  CppBacklab.cpp  CppBacklab.h  README.md
src/app/: CMakeLists.txt
src/app/backtester/: CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt
src/config/include/: BacktestConfig.hpp  ConfigParser.hpp
src/config/src/: ConfigParser.cpp
src/core/: CMakeLists.txt
src/core/include/: BacktestEngine.hpp
src/core/src/: BacktestEngine.cpp
src/indicator/: CMakeLists.txt
src/indicator/include/: ExponentialMovingAverage.hpp  IIndicator.hpp  IndicatorFactory.hpp  SimpleMovingAverage.hpp
src/indicator/src/: ExponentialMovingAverage.cpp  IndicatorFactory.cpp  SimpleMovingAverage.cpp
src/quote/: CMakeLists.txt
src/quote/include/: QuoteLoader.hpp  StockQuote.hpp
src/quote/src/: QuoteLoader.cpp  StockQuote.cpp
src/strategy/: CMakeLists.txt
src/strategy/include/: EMASupportStrategy.hpp  IStrategy.hpp  SMASupportStrategy.hpp  StrategyFactory.hpp
src/strategy/src/: EMASupportStrategy.cpp  SMASupportStrategy.cpp  StrategyFactory.cpp
src/utils/: CMakeLists.txt
src/utils/include/: LogMacros.h  Logger.hpp
src/utils/src/: Logger.cpp
